wacc_examples/invalid_TEST/semanticErr/function/functionUndefined_US.wacc
# call to undefined function

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
	int f() is
		return 0 
	end
	bool b = call j() ;
	println b 
end
	
